--- a/client/index.jade
+++ b/client/index.jade
@@ -28,5 +28,7 @@ html(lang='en', ng-app='angular-prototype')
     script(src='/vendor/lodash/lodash.js')
     script(src='/vendor/moment/moment.js')
     script(src='/vendor/bootstrap/dist/js/bootstrap.min.js')
+    script(src='/vendor/firebase/firebase.js')
+    script(src='/vendor/angularfire/dist/angularfire.js')
 
     script(src='/index.js')
