--- a/client/views/nav/nav.jade
+++ b/client/views/nav/nav.jade
@@ -12,3 +12,4 @@ nav.navbar.navbar-default
         li: a(ui-sref='home'): i.fa.fa-home &nbsp; Home
         li: a(ui-sref='faq'): i.fa.fa-info &nbsp; Faq
         li: a(ui-sref='contact'): i.fa.fa-at &nbsp; Contact
+        li: a(ui-sref='todos'): i.fa.fa-list &nbsp; Todos
