--- a/client/views/todos/index.jade
+++ b/client/views/todos/index.jade
@@ -18,9 +18,6 @@ h1 Todos
       .form-group
           button.btn.btn-default(type='submit', ng-click='add()') Add Todo
   .col-xs-8
-
-.row
-  .col-xs-12
     table.table.table-hover.table-striped
       thead
         tr
@@ -33,4 +30,4 @@ h1 Todos
           td: input(type='checkbox', ng-model='todo.isComplete', ng-click='update(todo)')
           td {{todo.title}}
           td {{moment(todo.due).format('MMMM Do YYYY')}}
-          td: pre {{todo | json}}
+          td {{todo.priority}}
